# sklearn-xarray

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  appveyor.yml  circle.yml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md
_downloads/: activity_recognition.ipynb  activity_recognition.py  plot_activity_recognition.ipynb
_downloads/d1184036868548d7975f7a966da7e0f2/: plot_activity_recognition.ipynb
_downloads/eb0c623cd85ffe415da68f890a843b7f/: plot_activity_recognition.ipynb
_modules/: index.html
_modules/sklearn_xarray/: data.html  (+5 more)
_sources/: index.rst.txt
_static/: custom.css  documentation_options.js
auto_examples/: activity_recognition.html  index.html  plot_activity_recognition.html  sg_execution_times.html
content/: api.html  installation.html  intro.html  pipeline.html  target.html  transformers.html  whatsnew.html  wrappers.html
doc/: conf.py  index.rst
docs/: Makefile  conf.py  index.rst
examples/: activity_recognition.ipynb  activity_recognition.py  plot_activity_recognition.py
sklearn_xarray/: __init__.py  data.py  dataarray.py  datasets.py  model_selection.py  pipeline.py  preprocessing.py  target.py  utils.py  version.py
tests/: mocks.py  test_common.py  test_datasets.py  test_model_selection.py  test_preprocessing.py  test_target.py  test_utils.py
(+81 files in other folders)
