[metadata]
description-file = README.rst
url = https://phausamann.github.io/sklearn-xarray/

[aliases]
# python2.7 has upgraded unittest and it is no longer compatible with some
# of our tests, so we run all through nose
test = nosetests

[nosetests]
exe = 1
cover-html = 1
cover-html-dir = coverage
cover-package = sklearn_xarray

detailed-errors = 1
with-doctest = 1
doctest-tests = 1
doctest-extension = rst
doctest-fixtures = _fixture
ignore-files=^setup\.py$
